package s2c;

message EnterScene
{
	required string name =1;	
}
